--- a/deployment/local/Dockerfile
+++ b/deployment/local/Dockerfile
@@ -1,1 +1,18 @@
-#TODO create local dockerfile
+FROM python:3.10
+
+ENV PYTHONUNBUFFERED=1
+ENV PYTHONDONTWRITEBYTECODE=1
+
+WORKDIR /app
+
+RUN pip install --upgrade pip && pip install poetry
+
+COPY ../../pyproject.toml /app/
+COPY ../../poetry.lock /app/
+
+RUN poetry config virtualenvs.create true
+RUN poetry install --no-dev --no-root --no-interaction --no-ansi
+
+
+COPY . /app/
+
