--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,11 +15,13 @@ isort = "^5.12.0"
 black = "^23.1.0"
 djangorestframework = "^3.14.0"
 psycopg2 = "^2.9.5"
-celery = "^5.2.7"
+celery = {extras = ["redis"], version = "^5.2.7"}
 redis = "^4.5.1"
-python-dotenv = "^1.0.0"
 drf-spectacular = "^0.26.0"
 coloredlogs = "^15.0.1"
+django-environ = "^0.10.0"
+django-celery-results = "^2.5.0"
+gunicorn = "^20.1.0"
 
 
 [build-system]
