--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -28,7 +28,6 @@ jobs:
         with:
           python-version: "3.10"
 
-
       - name: cache poetry install
         uses: actions/cache@v3
         with:
@@ -48,15 +47,13 @@ jobs:
           path: .venv
           key: pydeps-${{ hashFiles('**/poetry.lock') }}
 
-      - run: poetry install --no-interaction --no-root
-        working-directory: .
-        if: steps.cache-deps.outputs.cache-hit != 'true'
-
-      - run: poetry install --no-interaction
-        working-directory: .
+      - run: |
+          if [ "${{ steps.cache-deps.outputs.cache-hit }}" != "true" ]; then
+            poetry install --no-interaction --no-root
+          fi
+          poetry install --no-interaction
 
       - name: run tests
-        working-directory: .
         env:
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
           DEBUG: ${{ secrets.DEBUG }}
