--- a/deployment/local/docker-compose.yml
+++ b/deployment/local/docker-compose.yml
@@ -82,6 +82,8 @@ services:
     depends_on:
       - db
       - redis
+    env_file:
+      - .env
     deploy:
       restart_policy:
           condition: on-failure
@@ -103,6 +105,8 @@ services:
     depends_on:
       - db
       - redis
+    env_file:
+      - .env
     deploy:
       restart_policy:
         condition: on-failure
