--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ coloredlogs = "^15.0.1"
 django-environ = "^0.10.0"
 django-celery-results = "^2.5.0"
 gunicorn = "^20.1.0"
+django-redis = "^5.2.0"
+django-ratelimit = "^4.0.0"
 
 
 [build-system]
