--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ django-celery-results = "^2.5.0"
 gunicorn = "^20.1.0"
 django-redis = "^5.2.0"
 django-ratelimit = "^4.0.0"
+django-fakeredis = "^0.1.2"
 
 
 [build-system]
